--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,18 +72,22 @@ a {
 /* header related style */
 header {
     background: #FFF8F3;
-
+    background-image: url(../portfolio-resources/images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner {
-    padding: 30 30 30 150;
+    padding: 30px 30px 0px 150px;
     display: flex;
+    justify-content: space-between
 }
 
 img {
     width: 584px;
     height: 676px;
     flex-shrink: 0;
+
 }
 
 .btn-secondary {
@@ -93,4 +97,66 @@ img {
     font-style: normal;
     font-weight: 400;
     padding: 18px 35px;
+}
+
+.banner-greeings {
+    color: var(--Dark-02, #474747);
+
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 5px;
+}
+
+.banner-title {
+    color: var(--Dark-01, #181818);
+    font-family: Open Sans;
+    font-size: 85px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 20px;
+}
+
+.banner-para {
+    color: var(--Dark-03, #757575);
+    font-family: Open Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+    max-width: 550px;
+    max-height: 60px;
+}
+
+/* main section styles */
+.about {
+
+    align-items: center;
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0px;
+}
+
+.section-title {
+    align-items: center;
+    color: #181818;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.section-description{
+    color: var(--Dark-03, #757575);
+text-align: center;
+font-family: Open Sans;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 166.667% */
 }
