--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -277,3 +277,13 @@ line-height: 28px; /* 175% */
     text-align: center;
     margin-top: 50px;
 }
+footer{
+    display: flex;
+padding: 130px 230px;
+    background: #FFF8F3;
+    margin-top: 100px;
+}
+.social-icon{
+    width: 24px;
+    height: 24px;
+}
