--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,9 +72,9 @@ a {
 /* header related style */
 header {
     background: #FFF8F3;
-    background-image: url(../portfolio-resources/images/header_bg.png);
+    background-image: url(../portfolio-resources/images/header_bg.png) ,url('../portfolio-resources/images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right,top left;
 }
 
 .banner {
